HLT-3767: fix for header-wrap height on xs

--- a/src/main/webapp/bundles/health_v4/less/layout.less
+++ b/src/main/webapp/bundles/health_v4/less/layout.less
@@ -8,8 +8,15 @@
   }
 }*/
 
-.header-wrap {
-  @media (@xs-only) {
-    min-height: 87px;
+@media (@xs-only) {
+  body:not([data-step=results]) {
+    .header-wrap {
+      min-height: 87px;
+    }
+    &.couponShown {
+      .header-wrap {
+        min-height: 127px;
+      }
+    }
   }
 }
